# actinius-gnssr

./: README.md
aux_src/ciphersuites/: CMakeLists.txt  prj.conf
aux_src/ciphersuites/cert/: GeantCA.pem
aux_src/ciphersuites/src/: main.c
aux_src/fmfu_smp_svr/: CMakeLists.txt  mcuboot_overlay-rsa.conf
building_instructions/: README.md
config/: config.json.default
debugtools/: catserial.sh  plothouskeeping.py
firmware_img/: README.md
firmware_src/: CMakeLists.txt  Kconfig  overlay-mbedtls.conf  prj.conf
firmware_src/boards/: actinius-icarus_ns.overlay  actinius_icarus.overlay  actinius_use_externalsim.overlay
firmware_src/cert/: GEANT_TLS_RSA_1.inc  get_certificates.sh  stringifyPEM.sh
firmware_src/modules/lz4stream/lib/: lz4.c  lz4file.c  lz4file.h  lz4frame.c
firmware_src/modules/lz4stream/zephyr/: CMakeLists.txt  Kconfig  module.yml
firmware_src/src/: config.c  config.h  featherw_datalogger.c  featherw_datalogger.h  gnss.c  gnss.h  led_buttons.c  led_buttons.h  lz4file.c  lz4file.h  main.c  modem.c  modem.h  supl_support.c  supl_support.h  uploadclient.c  uploadclient.h
